# rinoh-mscorefonts

./: .gitignore  DEVELOPING.rst  README.rst  build_distributions.py  pyproject.toml  rinoh_mscorefontinstaller.py
