[tool.poetry]
name = "rinoh-mscorefontinstaller"
version = "0.1.0"
description = "Helper package to install Microsoft's Core fonts for the Web"
authors = ["Brecht Machiels <brecht@mos6581.org>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/brechtm/rinoh-mscorefonts"
repository = "https://github.com/brechtm/rinoh-mscorefonts"
keywords = ["fonts", "truetype"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Printing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Fonts",
]
packages = [
    { include = "rinoh_mscorefontinstaller.py" }
]

[tool.poetry.dependencies]
python = "^3.7.0"
hachoir = { url = "https://github.com/vstinner/hachoir/archive/8000dbeb9aad587e8dc5be8202796cdfb67f899e.zip" }

[tool.poetry.dev-dependencies]
twine = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
